--- a/RobotProject.yml
+++ b/RobotProject.yml
@@ -3,7 +3,116 @@ Version 1.5
 ---
 Children:
 - Children:
-  - Children: []
+  - Children:
+    - Children:
+      - Children: []
+        Properties:
+          Type: !!robotbuilder.data.properties.ChoicesProperty
+            choices: &id001 [Victor, Jaguar, Talon, VictorSP, TalonSRX]
+            default: Talon
+            name: Type
+            validators: null
+            value: VictorSP
+          Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
+            choices: &id002 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+              '11', '12', '13', '14', '15', '16', '17', '18', '19']
+            default: '0'
+            name: Output Channel (PWM)
+            validators: &id003 [PWMOutput]
+            value: '0'
+        Base: Speed Controller
+        Name: frontLeft
+      - Children: []
+        Properties:
+          Type: !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id001
+            default: Talon
+            name: Type
+            validators: null
+            value: VictorSP
+          Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id002
+            default: '0'
+            name: Output Channel (PWM)
+            validators: *id003
+            value: '1'
+        Base: Speed Controller
+        Name: backLeft
+      - Children: []
+        Properties:
+          Type: !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id001
+            default: Talon
+            name: Type
+            validators: null
+            value: VictorSP
+          Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id002
+            default: '0'
+            name: Output Channel (PWM)
+            validators: *id003
+            value: '2'
+        Base: Speed Controller
+        Name: frontRight
+      - Children: []
+        Properties:
+          Type: !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id001
+            default: Talon
+            name: Type
+            validators: null
+            value: VictorSP
+          Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
+            choices: *id002
+            default: '0'
+            name: Output Channel (PWM)
+            validators: *id003
+            value: '3'
+        Base: Speed Controller
+        Name: backRight
+      Properties:
+        Sensitivity: !!robotbuilder.data.properties.DoubleProperty {default: 0.5,
+          name: Sensitivity, validators: null, value: 0.5}
+        Right Rear Motor: !!robotbuilder.data.properties.ChildSelectionProperty
+          default: 3
+          name: Right Rear Motor
+          type: PIDOutput
+          validators: [RobotDrive4, ChildDropdownSelected]
+          value: chassis backRight
+        Right Front Motor: !!robotbuilder.data.properties.ChildSelectionProperty
+          default: 2
+          name: Right Front Motor
+          type: PIDOutput
+          validators: [RobotDrive4, ChildDropdownSelected]
+          value: chassis frontRight
+        Maximum Output: !!robotbuilder.data.properties.DoubleProperty {default: 1,
+          name: Maximum Output, validators: null, value: 1.0}
+        Left Front Motor Inverted: !!robotbuilder.data.properties.BooleanProperty {
+          default: false, name: Left Front Motor Inverted, validators: null, value: false}
+        Right Front Motor Inverted: !!robotbuilder.data.properties.BooleanProperty {
+          default: false, name: Right Front Motor Inverted, validators: null, value: false}
+        Left Rear Motor: !!robotbuilder.data.properties.ChildSelectionProperty
+          default: 1
+          name: Left Rear Motor
+          type: PIDOutput
+          validators: [RobotDrive4, ChildDropdownSelected]
+          value: chassis backLeft
+        Right Rear Motor Inverted: !!robotbuilder.data.properties.BooleanProperty {
+          default: false, name: Right Rear Motor Inverted, validators: null, value: false}
+        Safety Expiration Time: !!robotbuilder.data.properties.DoubleProperty {default: 0.1,
+          name: Safety Expiration Time, validators: null, value: 0.1}
+        Left Rear Motor Inverted: !!robotbuilder.data.properties.BooleanProperty {
+          default: false, name: Left Rear Motor Inverted, validators: null, value: false}
+        Safety Enabled: !!robotbuilder.data.properties.BooleanProperty {default: true,
+          name: Safety Enabled, validators: null, value: true}
+        Left Front Motor: !!robotbuilder.data.properties.ChildSelectionProperty
+          default: 0
+          name: Left Front Motor
+          type: PIDOutput
+          validators: [RobotDrive4, ChildDropdownSelected]
+          value: chassis frontLeft
+      Base: Robot Drive 4
+      Name: robotDrive
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Default Command, type: Command, validators: null, value: None}
@@ -25,7 +134,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id001 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id004 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14', '15', '16']
           default: '1'
           name: Button
@@ -35,10 +144,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id002 [TypeDropdownSelected]
+          validators: &id005 [TypeDropdownSelected]
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id003 [whileHeld, whenPressed, whenReleased]
+          choices: &id006 [whileHeld, whenPressed, whenReleased]
           default: whileHeld
           name: When to Run
           validators: null
@@ -50,7 +159,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -59,10 +168,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -74,7 +183,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -83,10 +192,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -98,7 +207,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -107,10 +216,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -122,7 +231,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -131,10 +240,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -146,7 +255,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -155,10 +264,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -170,7 +279,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -179,10 +288,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -194,7 +303,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -203,10 +312,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -218,7 +327,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -227,10 +336,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -242,7 +351,7 @@ Children:
         Joystick: !!robotbuilder.data.properties.ParentProperty {default: parent,
           name: Joystick, validators: null, value: joystickDriver}
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id001
+          choices: *id004
           default: '1'
           name: Button
           validators: null
@@ -251,10 +360,10 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id002
+          validators: *id005
           value: DoNothing
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
+          choices: *id006
           default: whileHeld
           name: When to Run
           validators: null
@@ -287,7 +396,7 @@ Children:
       Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Requires, type: Subsystem, validators: null, value: None}
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
-        name: Button on SmartDashboard, validators: null, value: true}
+        name: Button on SmartDashboard, validators: null, value: false}
     Base: Command
     Name: DoNothing
   Properties: {}
