--- a/RobotProject.yml
+++ b/RobotProject.yml
@@ -113,6 +113,18 @@ Children:
           value: chassis frontLeft
       Base: Robot Drive 4
       Name: robotDrive
+    - Children: []
+      Properties:
+        Input Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25']
+          default: '0'
+          name: Input Channel (Digital)
+          validators: [DigitalChannel]
+          value: '2'
+      Base: Digital Input
+      Name: toteSensor
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Default Command, type: Command, validators: null, value: DriveWithJoystickMecanum}
