Added Drive, Strafe, and Wait commands
Here I added 2 driving commands and a wait command. The 2 driving
commands, AutonDriveAtSpeedForTime and AutonStrafeAtSpeedForTime, take a
move/strafe variable ranging from -1.0 (backward) to 1.0 (forward) and a
time variable in seconds. The AutonWait command just takes a time
variable, in seconds, and waits for the specified time before allowing
the next scheduled command to run.

--- a/RobotProject.yml
+++ b/RobotProject.yml
@@ -443,6 +443,30 @@ Children:
         name: Button on SmartDashboard, validators: null, value: false}
     Base: Command
     Name: DriveWithJoystickMecanum
+  - Children: []
+    Properties:
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: chassis}
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: false}
+    Base: Command
+    Name: AutonDriveAtSpeedForTime
+  - Children: []
+    Properties:
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: None}
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: false}
+    Base: Command
+    Name: AutonStrafeAtSpeedForTime
+  - Children: []
+    Properties:
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: None}
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: false}
+    Base: Command
+    Name: AutonWait
   Properties: {}
   Base: Commands
   Name: Commands
