Added AutonDriveTurnDegrees command & test
I created an AutonDriveTurnDegrees command (long name... I know...) that
turns the robot an approximate number of degrees at a specified speed. I
also added an excessive amount of test commands for this to the
AutonomousCommand command. The turning command seems to be working, but
I can't be positive yet because the robot has no wheels and I can't tell
which way the motors are rotating. So yea.

--- a/RobotProject.yml
+++ b/RobotProject.yml
@@ -489,6 +489,14 @@ Children:
         name: Button on SmartDashboard, validators: null, value: true}
     Base: Command
     Name: GyroReset
+  - Children: []
+    Properties:
+      Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
+        name: Requires, type: Subsystem, validators: null, value: chassis}
+      Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
+        name: Button on SmartDashboard, validators: null, value: false}
+    Base: Command
+    Name: AutonDriveTurnDegrees
   Properties: {}
   Base: Commands
   Name: Commands
