Added Auton Chooser
Here I added an autonomous chooser to the SmartDashboard. This appears
as a list f radio buttons labeled "Do Nothing", "Robot Set", "1 Tote",
"2 Tote Stack", "3 Tote Stack", "Container", and "Test Command". Only
the first two and last command are defined right now because the other
auton programs aren't created yet.

--- a/RobotProject.yml
+++ b/RobotProject.yml
@@ -464,7 +464,7 @@ Children:
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
         name: Button on SmartDashboard, validators: null, value: true}
     Base: Command Group
-    Name: Autonomous Command
+    Name: TestCommand
   - Children: []
     Properties:
       Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
